[feat] added store & import vuetify

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -7,5 +7,6 @@
   "open_dialog": "Open dialog",
   "select_a_language": "Select a language",
   "vietnamese": "Vietnamese",
-  "english": "English"
+  "english": "English",
+  "close_dialog": "Close dialog"
 }
