--- a/i18n/vi.json
+++ b/i18n/vi.json
@@ -6,5 +6,6 @@
   "forbidden": "Cấm",
   "open_dialog": "Mở hội thoại",
   "vietnamese": "Tiếng Việt",
-  "english": "Tiếng Anh"
+  "english": "Tiếng Anh",
+  "close_dialog": "Đóng hội thoại"
 }
